updated gitignore to ignore compiled js/css; fixed js/css app in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/styles.min.css" rel="stylesheet">
 
   </head>
   <body>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery.js"><\/script>');</script>
-    <script src="assets/js/scripts.min.js"></script>
+    <script src="js/scripts.min.js"></script>
 
   </body>
 </html>
