--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,42 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link href="css/styles.min.css" rel="stylesheet">
+    <style type="text/css">
+      .delete-me-bg {
+        bottom: 0;
+        position: absolute;
+        height: 100%;
+        top: 0;
+        right: 0;
+        width: 100%;
+      }
 
+      .delete-me-msg {
+        font-family: sans-serif;
+        font-size: 75%;
+        left: 50%;
+        line-height: 1;
+        position: absolute;
+        text-align: center;
+        text-transform: uppercase;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+           -moz-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+      }
+    </style>
   </head>
   <body>
+
+    <div class="delete-me-bg">
+      <div class="delete-me-msg">
+        <h1>Prototype</h1>
+        <p>Simple and fast front-end boilerplate for prototyping projects</p>
+      </div>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery.js"><\/script>');</script>
     <script src="js/scripts.min.js"></script>
-
   </body>
 </html>
